--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -58,6 +58,7 @@ body{
   cursor: help;
   z-index: 5000;
   mix-blend-mode: exclusion;
+  z-index: -1;
 }
 
 .float-text:hover {
